// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGranularity Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Daily"})",
    "value": "Daily",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Weekly"})",
    "value": "Weekly",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Monthly"})",
    "value": "Monthly",
  },
  {
    "selected": false,
    "title": "t(curiosity-toolbar.label_granularity, {"context":"Quarterly"})",
    "value": "Quarterly",
  },
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "granularity": "Daily",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": undefined,
      },
      {
        "beginning": "2019-06-20T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": undefined,
      },
      {
        "ending": "2019-07-20T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should handle updating granularity through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "granularity": "dolor sit",
        "type": "SET_QUERY_RHSM_granularity",
        "viewId": "loremIpsum",
      },
      {
        "beginning": "2019-06-20T00:00:00.000Z",
        "type": "SET_QUERY_RHSM_beginning",
        "viewId": "loremIpsum",
      },
      {
        "ending": "2019-07-20T23:59:59.999Z",
        "type": "SET_QUERY_RHSM_ending",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGranularity Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"granularity"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldGranularity"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Daily"})",
        "value": "Daily",
      },
      {
        "selected": true,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Weekly"})",
        "value": "Weekly",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Monthly"})",
        "value": "Monthly",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Quarterly"})",
        "value": "Quarterly",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"granularity"})"
  position="left"
  selectedOptions="Weekly"
  splitButtonVariant={null}
  toggleIcon={null}
  variant="single"
/>
`;
